--- a/music_controller/frontend/package.json
+++ b/music_controller/frontend/package.json
@@ -2,7 +2,7 @@
   "name": "frontend",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "index.tsx",
   "scripts": {
     "dev": "webpack --mode development --watch",
     "build": "webpack --mode production"
@@ -24,6 +24,11 @@
     "@babel/plugin-proposal-class-properties": "^7.16.0",
     "@material-ui/core": "^4.12.3",
     "@material-ui/icons": "^4.11.2",
-    "react-router-dom": "^6.0.2"
+    "@types/jest": "^27.0.2",
+    "@types/node": "^16.11.7",
+    "@types/react": "^17.0.35",
+    "@types/react-dom": "^17.0.11",
+    "react-router-dom": "^6.0.2",
+    "typescript": "^4.5.2"
   }
 }
