--- a/music_controller/frontend/package.json
+++ b/music_controller/frontend/package.json
@@ -24,6 +24,7 @@
     "@babel/plugin-proposal-class-properties": "^7.16.0",
     "@material-ui/core": "^4.12.3",
     "@material-ui/icons": "^4.11.2",
+    "@mui/material": "^5.1.1",
     "@types/jest": "^27.0.2",
     "@types/node": "^16.11.7",
     "@types/react": "^17.0.35",
