added new front

--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,4 @@
 music_controller/frontend/node_modules/
 music_controller/spotify/credentials.py
+music_controller/reactapp/node_modules
+music_controller/reactapp/.gitignore
